fix surprise counter display + owner readability

--- a/modules/css/_cards.scss
+++ b/modules/css/_cards.scss
@@ -294,8 +294,9 @@ $color-flx-brown: #f6821f;
 
 .flx-card-overlay-owner {
   position: absolute;
-  top: -5px;
+  top: -8px;
   right: 0px;
   font-weight: bolder;
   font-size: 14px;
+  padding: 1px;
 }
